# Multithread_Chat_Server

./: .gitignore  CMakeLists.txt  README  README.md
.github/workflows/: msvc.yml  superlinter.yml
Client/: CMakeLists.txt  chatClient.cpp  chatClient.h  client.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  userwidget.cpp  userwidget.h  userwidget.ui
Server/: CMakeLists.txt  chatserver.cpp  chatserver.h  server.cpp
chat/: CMakeLists.txt  mainwindow.h  usernameWindow.h  usernameWindow.ui  userwidget.h
